# ez-video-capture

./: Cargo.toml  README.md
.github/workflows/: CI-python.yml
ez-video-capture-core/: Cargo.toml
ez-video-capture-core/src/: capture.rs  core.rs  error.rs  lib.rs  packet.rs  writer.rs
ez-video-capture-core/src/decoder/: hardware.rs  mod.rs  software.rs
ez-video-capture-python/: Cargo.toml  README.md  pyproject.toml
ez-video-capture-python/ez_video_capture/: __init__.py  __init__.pyi
ez-video-capture-python/src/: lib.rs
